2010-02-08  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42995
	* tree-inline.c (estimate_move_cost): Assert we are not called
	with a void type.
	(estimate_num_insns): Do not count the terminating void_type_node
	of a function argument type list.

	Backport from mainline:
	2010-01-06  Richard Guenther  <rguenther@suse.de>

	* ipa-inline.c (cgraph_decide_inlining_incrementally): Do
	not inline regular functions into always-inline functions.

	2010-01-05  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/42462
	* ipa-inline.c (compute_inline_parameters): Pass node->decl instead of
	current_function_decl to helper functions and macros.

2010-02-04  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/42952
	* dse.c (const_or_frame_p): Remove MEM handling.

2010-01-31  Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/42898
	Backport from mainline:
	2009-04-23  Eric Botcazou  <ebotcazou@adacore.com>

	* gimplify.c (gimplify_modify_expr_rhs) <VAR_DECL>: Do not do a direct
	assignment from the constructor either if the target is volatile.

2010-01-31  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42898
	* gimplify.c (gimplify_init_constructor): For volatile LHS
	initialize a temporary.

2010-01-26  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/sparc/sparc.c (sparc_elf_asm_named_section): Test for
	HAVE_GNU_AS value.
	* config/sparc/sysv4.h [HAVE_GNU_AS] (TARGET_ASM_NAMED_SECTION):
	Test for HAVE_GNU_AS value.

2010-01-26  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/42866
	* omp-low.c (expand_omp_sections): Only use single_pred if
	l2_bb is single_pred_p.

2010-01-25  Christian Bruel  <christian.bruel@st.com>

	PR target/42841
	* config/sh/sh.c (find_barrier): Increase length for non delayed
	conditional branches.
	(sh_insn_length_adjustment): Use JUMP_TABLE_DATA_P.
	
2010-01-25  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	Backport from trunk.
	2010-01-19  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
